# ChangeLog for dev-libs/glib
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.397 2010/01/19 17:17:43 armin76 Exp $

  19 Jan 2010; Raúl Porcel <armin76@gentoo.org> glib-2.22.2.ebuild:
  arm stable

*glib-2.22.3 (18 Dec 2009)

  18 Dec 2009; Romain Perier <mrpouet@gentoo.org> +glib-2.22.3.ebuild:
  Version bump

  10 Dec 2009; Raúl Porcel <armin76@gentoo.org> glib-2.22.2.ebuild:
  sparc stable

  17 Nov 2009; Brent Baude <ranger@gentoo.org> glib-2.20.5-r1.ebuild:
  Marking glib-2.20.5-r1 ppc64 for bug 286102

  10 Nov 2009; Raúl Porcel <armin76@gentoo.org> glib-2.20.5-r1.ebuild:
  ia64/m68k/s390/sh stable wrt #286102

  09 Nov 2009; Tiago Cunha <tcunha@gentoo.org> glib-2.20.5-r1.ebuild:
  stable sparc, security bug 286102

  09 Nov 2009; Markus Meier <maekke@gentoo.org> glib-2.20.5-r1.ebuild:
  amd64/arm stable, bug #286102

  09 Nov 2009; Jeroen Roovers <jer@gentoo.org> glib-2.20.5-r1.ebuild:
  Stable for HPPA (bug #286102).

  08 Nov 2009; Mounir Lamouri <volkmar@gentoo.org> glib-2.20.5-r1.ebuild:
  Stable for ppc, bug 286102

  07 Nov 2009; Romain Perier <mrpouet@gentoo.org>
  glib-2.20.5-r1.ebuild:
  Fix bug #292292, eautomake failed due to missing gtk-doc-am in DEPEND,
  drop redundant elibtoolize.

  07 Nov 2009; Tobias Klausmann <klausman@gentoo.org> glib-2.20.5-r1.ebuild:
  Stable on alpha, bug #286102

  07 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  glib-2.20.5-r1.ebuild:
  stable x86, security bug 286102

*glib-2.20.5-r1 (06 Nov 2009)

  06 Nov 2009; Romain Perier <mrpouet@gentoo.org>
  +glib-2.20.5-r1.ebuild,
  +files/glib2-CVE-2009-3289.patch:
  Fix bug #286102, symlink permission error (CVE-2009-3289), new revision.

  02 Nov 2009; Gilles Dartiguelongue <eva@gentoo.org> glib-2.22.2.ebuild:
  Remove virtual/libc again.

*glib-2.22.2 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/glib-2.18.1-gdesktopappinfo-memleak-fix.patch,