@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX glib-1.2.10-automake.patch 827 RMD160 3b1485f89a157b60f31f5ae8ffe2333ab842d217 SHA1 cd40e4dc579190a89e09fad9ac7b209f24b231b3 SHA256 db6d22caf4054c09467b50b6d85566eec7479a29169460950e423c083332ef67
 AUX glib-1.2.10-configure-LANG.patch 1464 RMD160 91481ba6b3f7a1d6e22a4ab7003fcee17450f3c1 SHA1 d98cc2f4ac6cc4aae55270ad0e5705af4de9b3ad SHA256 32377819896297caf9628f382c7bba09ee0a049bd977e9ea927314c0c2e669b4
 AUX glib-1.2.10-gcc34-fix.patch 2008 RMD160 7e92b8842a8232cada12453d7f5e5a587a2bf496 SHA1 cb9c6e2f5320590713b3fba61f1d984e569d5d08 SHA256 848620bc200c2a42d726744fe6c36e20a396624e82b0c742b726dd72287e6cdd
@@ -13,10 +16,18 @@ DIST glib-1.2.10.tar.gz 421480 RMD160 f19efe8c87ebeea979a4d36902d8a8209640cd95 S
 DIST glib-2.20.5.tar.bz2 5037738 RMD160 c71ccaaf0a196e21e144041ec3286db18a03a960 SHA1 19e2b2684d7bc35a73ff94eb7fd15fc70cc6f292 SHA256 88f092769df5ce9f784c1068a3055ede00ada503317653984101d5393de63655
 DIST glib-2.22.2.tar.bz2 5490926 RMD160 77227f8feb61c88f9f7fcff586a59ec38114a73d SHA1 bdd9c4b930e81203ea69fe83876cb6c82bdc5a38 SHA256 a4a41d02fc2d3f5effa1fc3466918e0b3ab60e9eb0a08139b997f2649cbacca3
 DIST glib-2.22.3.tar.bz2 5009176 RMD160 53e1707547612e592bd2a3b5f7dfc7be1c09ed5c SHA1 185d5b80adef96019daf7402cc6762cc4d37470d SHA256 edf1a42cfefc13dbb2c0973188a45e02908d6fe31e769306b190d15ace6c8b8a
+DIST glib-2.22.4.tar.bz2 5012207 RMD160 66dc6ec0f1b1d422f50f6d55700bee8d526318cc SHA1 be135a25c233a199f043161777d31ac30e42f435 SHA256 0d1f6bf8aaeab772f2370229eefda45bef434e3f29a7d1d8e5dfafeaa1d8ad14
 EBUILD glib-1.2.10-r5.ebuild 1764 RMD160 dc6544841f2acb73d5951100ce9c9182f4d9560e SHA1 e6649f70934720527f69995ab0b8c845032cfb0f SHA256 24442b44089e15432a4f1411d2d59dff9d5c2fbfb91c801b96087588ff71373b
 EBUILD glib-2.20.5-r1.ebuild 2764 RMD160 36b82bded5d46abd6f786ceb40bb9a5ea7a654c9 SHA1 54daa7a36b3dafd74818b3769da523f06e5ed23d SHA256 3714c57070320eb4ba89a13e03f21f3fff281a82423c7609bdfabc77864ee6f1
-EBUILD glib-2.20.5.ebuild 2661 RMD160 eb8aadb66838404b9f432f29a6bce12b6dff988b SHA1 8d2cee22a7214bcbd9d079bd862799d083541081 SHA256 ba47aefad80035a7270a71f28aa9d8cc3e04df78a9743137b3fffd1c0606b7b8
 EBUILD glib-2.22.2.ebuild 2699 RMD160 e4ae7c825f9547b5628b854da36267aa819e601a SHA1 8adc11d2cd8b9e7faca39ae800cd6d80f438b030 SHA256 6994ab96fe5546effa3b53516434417ce0dcb906f08716bcc403a1bbbd90e8b6
 EBUILD glib-2.22.3.ebuild 2701 RMD160 ec542c2781042d7407d627c1bd0569a45093ed05 SHA1 c00464f050d9adcda62369dd010f65a5b4f4bb48 SHA256 a77e4293c7d56cda5cfb79fd2d90c9df2d5b8f2562e2d68dd1f2eeffb5ad10e5
-MISC ChangeLog 49053 RMD160 95c59364f01abb621f20dae95c12f4333a8b9b4b SHA1 c028a363ccdbc0cffc0fcef250ebb40fab8648c6 SHA256 431f43da85e0d5921058a4b02c6621cfb60bb24faec0408a54a6a4f41c81983b
+EBUILD glib-2.22.4.ebuild 2875 RMD160 55f7132f25fe0566bddd7fd9d057d0a4cd747de4 SHA1 55f1a1a63d95d014064916f6bfa05ee5d3ec6ab0 SHA256 83407143720a74a66a23dfb4cda95424b2e7a5a7eeb1357e843d405290218948
+MISC ChangeLog 49283 RMD160 1b511ee9c95da78f5214aea4f5634d3c184d72b7 SHA1 3142e09bce821f95d5e94e2db0182bb706a49547 SHA256 0bbc2236ef955a4c7b33711c099b1140956cec59fa35c042e86e4a2846122f47
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAktiI9EACgkQ1fmVwcYIWAZL6gCgtqAWGjZolCGGWfCTcAumMMul
+nA0AnisKBzuWjn7iIzVL6J9ZY2/Qoa2n
+=tqew
+-----END PGP SIGNATURE-----
